scss/variare.scss
$font: 'Helvetica Neue', 'Liberation Sans', 'FreeSans', Arial, sans-serif;
$theme-color: #4DBCE9;
$accent-color: #F2DE5C;
$header-top-padding: 0px;
$subreddit-name: true;

/*Calculated Variables, DO NOT MODIFY*/
$theme-color--light: desaturate(lighten($theme-color, 15%), 50%);
$theme-color--lighter: desaturate(lighten($theme-color, 35%), 50%);
$theme-color--dark: darken($theme-color, 5%);
$theme-color--darker: darken($theme-color, 30%);
$theme-color--light--transparent: transparentize($theme-color--light, 0.5);
$theme-color--dark--transparent: transparentize($theme-color--dark, 0.5);
$theme-color--darker--transparent: transparentize($theme-color--darker, 0.5);
$theme-color--transparent: transparentize($theme-color, 0.5);

$header-item-font-size: 1.2em;

@mixin subreddit-name-display($subreddit-name) {
  @if $subreddit-name {
    display: inline-block;
  } @else {
    display: none;
  }
}

/*global*/
body {
  font-family: $font;
  background: $theme-color--lighter;
}
a {
  color: $theme-color--dark;
}
*{
  &:before, &:after {
    box-sizing: border-box;
  }
}

/*subreddits header bar*/
#sr-header-area {
  background: $theme-color--darker--transparent;
  opacity: .5;
  border-bottom: 0;
  color: #fff;

  &:hover {
    opacity: 1;
  }

  .separator {
    color: #fff;
  }

  .sr-list ul.sr-bar {
    li {
      a {
        color: #fff;
      }
      &.selected a {
        color: $accent-color;
      }
    }
    .separator {
      color: #fff;
    }
  }

  .dropdown.srdrop .selected {
    color: #fff;
    background: transparent;
    padding-right: 5px;

    &:after {
      content: ' [+]';
    }
  }

  #sr-more-link {
    background: $theme-color--dark;
    color: #fff;
  }
}

/*header*/
#header {
  background: $theme-color;
  border-bottom: 0;

  #header-bottom-left {
    margin-top: $header-top-padding;
    background: $theme-color--transparent;
    height: 48px;

    #header-img {
      display: inline-block;
    }

    .redditname {
      font-variant: normal;
      margin: 0;
      font-size: $header-item-font-size;
      vertical-align: middle;

      @include subreddit-name-display($subreddit-name);

      a {
        margin: 22px 16px 10px 16px;
        display: inline-block;
        color: #fff;

        &:before {
          content: '/r/';
        }
      }
    }

    ul.tabmenu {
      display: inline-block;
      vertical-align: middle;
      margin: 12px 0 0 0;

      li {
        display: inline-block;
        margin: 0;

        a {
          padding: 10px 16px;
          display: inline-block;
          font-size: $header-item-font-size;
          color: $accent-color;
          background: transparent;
          text-transform: uppercase;

          &:hover {
            background: $theme-color--light--transparent;
          }
        }
        &.selected a {
          background: $theme-color--lighter;
          border: 0;
          color: $theme-color--dark;
        }
      }
    }

  }

  #header-bottom-right {
    background: $theme-color--dark;
    height: 48px;
    padding: 0 20px;
    border-radius: 0;
    display: inline-block;

    .user {
      color: $accent-color;
    }

    .separator {
      color: #fff;
    }

    a {
      color: #fff;
      margin-top: 18px;

      &.message-count {
        background: $accent-color;
        color: $theme-color--darker;
      }
    }
  }
}

/*sidebar*/
.side {
  display: inline-block;
  padding: 10px 20px;
  margin: 10px;
  border: 1px solid $theme-color--light;
  width: 300px;

  .spacer {
    form#search {
      input[type=text] {
        text-align: center;
        font-family: $font;
        border: 0;
        border-bottom: 1px solid $theme-color--darker;

        &:focus {
          text-align: left;
          border-bottom: 3px solid $theme-color--dark;
        }
      }
    }

    .titlebox {
      h1 {
        font-family: $font;
        text-align: center;
        font-size: 20px;

        a {
          color: $theme-color--dark;

          &:before {
            content: '/r/';
          }
        }
      }
    }
  }

  .morelink {
    background: $theme-color--dark;
    border: 0;

    &:hover {
      background: $theme-color;
    }

    a {
      color: $accent-color;

      &:hover {
        color: $accent-color;
      }
    }

    .nub {
      display: none;
    }
  }

  ul.content {
    border: 0;
  }
}

/*main*/
.sheets {
  margin-right: 360px;
}

.content {
  margin: 10px;
  #siteTable .thing {
    background: #fff;
    padding: 10px;
    border: 1px solid $theme-color--light;

    &.stickied {
      background: $theme-color--dark;
      color: #fff;
      border: 1px solid $theme-color--darker;

      .score {
        background: $theme-color--lighter;
        height: 20px;
        width: 20px;
        border-radius: 20px;
        line-height: 20px;
      }

      .entry {
        .tagline, .tagline a, a {
          color: $theme-color--lighter;
        }

        .title, .stickied-tagline {
          color: $accent-color;
        }
      }
    }

    .entry {
      .title {
        .domain {
          color: transparent;
          opacity: 0.5;

          &:hover {
            opacity: 1;
          }

          a {
            color: $theme-color--dark;
          }
        }
      }

      .tagline {
        a {
          color: $theme-color--dark;
        }
      }
    }
  }
}

